[package]
name = "jabu"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
built = { version = "0.7", features = ["chrono", "semver"] }
chrono = "0.4.33"
pyo3 = "0.20.2"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
prettytable-rs = "0.10.0"
walkdir = "2.4.0"

[build-dependencies]
built = { version = "0.7", features = ["cargo-lock", "dependency-tree", "git2", "chrono", "semver"] }
